# AnyMail

./: README.md  plan.md  pyproject.toml  requirements.txt
anymail/: __init__.py  cli.py  config.py  db.py  imap.py  keychain.py  parse.py  smtp.py  types.py
skills/anymail/: SKILL.md
skills/anymail/references/: cli.md
skills/anymail/scripts/: anymail_api.py  anymail_run.py  examples_smoke.ps1
